--- a/style.css
+++ b/style.css
@@ -86,11 +86,18 @@ button:hover {
 }
 
 /* Sections Grid */
-#sectionsContainer {
+/* #sectionsContainer {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1rem;
     width: 100%;
+} */
+#sectionsContainer {
+    display: flex;
+    flex-direction: column;  
+    align-items: center;     
+    gap: 20px;
+    width: 50%;
 }
 
 /* Section Styling */
