--- a/style2.css
+++ b/style2.css
@@ -22,8 +22,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 1rem;
-    background-color: #7295ba;
-    color: #e6eafe;
+    background-color: #ffffff;
+    color: #000000;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -390,3 +390,10 @@ li button {
 #toggleAllBtn {
     margin-bottom: 20px; 
 }
+
+
+
+.hidden {
+    display: none;
+}
+
